# ExprsnDNS

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
scripts/: init-multiple-dbs.sh
src/: api.js  auth.js  ca-client.js  dns-server.js  exprsn-auth.js  exprsn-ca.js  index.js  models.js  storage.js
src/exprsn-auth/: .env.example  Dockerfile  index.js  jest.config.js  jest.integration.config.js  package.json
src/exprsn-auth/migrations/: 20251219000000-create-ldap-configs.js  20251222000001-create-users.js  20251222000002-create-organizations.js  20251222000003-create-groups.js  20251222000004-create-roles.js  20251222000005-create-permissions.js  20251222000006-create-applications.js  20251222000007-create-oauth2-clients.js  20251222000008-create-sessions.js  20251222000009-create-oauth2-tokens.js  20251222000010-create-oauth2-authorization-codes.js  20251222000011-create-user-groups.js  20251222000012-create-user-roles.js  (+6 more)
src/exprsn-ca/: .env.backup.2025-12-19T13-56-29-333Z  .env.example  Dockerfile  cluster.js  index.js  package.json
src/exprsn-dns/: Dockerfile  README.md  index.js  package.json
src/exprsndns/: __init__.py  api.py  cli.py  dns_server.py  models.py  storage.py
src/shared/: index.js  package.json  tls-config.js
test/: api-embedded.test.js  api.test.js  ca-client.test.js  dns-server.test.js  exprsn-auth.test.js  exprsn-ca.test.js  models.test.js  storage.test.js
tests/: test_api.py  test_dns_server.py  test_models.py  test_storage.py
(+318 files in other folders)
