[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exprsndns"
version = "0.1.0"
description = "Dynamic DNS service for the Exprsn network (.exprsn domain)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Exprsn Network" }]
dependencies = [
    "dnslib>=0.9.24",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
exprsndns = "exprsndns.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
